Fixed spacing issue with wrappers and sidebar

--- a/client/src/components/SidebarWrapper/style.css
+++ b/client/src/components/SidebarWrapper/style.css
@@ -1,3 +1,3 @@
 .sidebar{
-    width: 400%;
+    width: 100%;
 }
