--- a/client/src/components/TotalWrapper/style.css
+++ b/client/src/components/TotalWrapper/style.css
@@ -3,6 +3,6 @@
     float: left;
 }
 
-.sidebarWrapper{
+/* .sidebarWrapper{
     width: 25%;
-}
+} */
